k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-api-lb
spec:
  selector:
    app: simple-api
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
