k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: simple.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-api-lb
                port:
                  number: 80
